3.59.8

    * https://pm.cetera.ru/browse/CCD-1419
    * https://pm.cetera.ru/browse/CCD-1429

3.59.7

    * Bugfix. Автозаполнение alias при сохранении материала.

3.59.6

    * Корректировка виджета 'User.Profile.Edit'

3.59.5

    * Изменены настройки очистки текста Word для CKEditor

3.59.4

    * Правки для проекта Fastsite
    
3.59.3

    * CKEditor: виджеты теперь можно размещать внутри параграфов как inline элемент

3.59.2

    * CKEditor config: добавлена опция config.removePlugins = 'iframe';
    * CKEditor config: добавлена опция config.filebrowserUploadMethod = 'form';

3.59.1

    * Экспорт контента: добавлен экспорт пользовательских полей разделов
    
3.59.0

    * Отключен перехват исключений на FrontOffice
    * BackOffice. Множественный выбор полей в типах материалов.
    * CKEditor загружается с cdn.ckeditor.com

3.58.21

    * Сократил кол-во событий, логирующихся по умолчанию
    
3.58.20

	* BackOffice. Исправлена ошибка в редакторе "Набор пользователей"
	* BackOffice. Добавлен столбец ID в списке пользователей
	* API. Доработки метода DynamicFieldsObject::save() в плане сохранения множественных полей
	
3.58.19

	* https://pm.cetera.ru/browse/CCD-1352
	* API. в library добавлена библиотека https://github.com/componavt/phpmorphy вместо оригинального phpMorphy

3.58.18

	* API. https://pm.cetera.ru/browse/CCD-1376
	
3.58.17	
	
	* API. Новый метод \Cetera\User::hasRight($group_id) - имеет ли полномочия пользователь, предоставляемые группе

3.58.16

	* API. изменено поведение \Cetera\User::inInGroup($gid) теперь выдает только принадлежность к группе
	* API. добавлен метод \Cetera\User::hasRight($gid) - имеет ли пользователь полномочия, которые предоставлены группе

3.58.15

	* added /cms/include/data_object.php - get JSON info of material

3.58.14

	* API. Widget 'User.Register'. New parameter 'check_password'

3.58.13

	* https://pm.cetera.ru/browse/CCD-1331

3.58.12

	* FO. Multiple register forms on one page.

3.58.11
